add errorHandler
